--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate">
     <title>EscuelaManejoSanchezLimón</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="shunkcss.css" />
   </head>
   <body>
     <header>
