--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     </footer>
 
-    <script id="scr" src="scripts.js"></script>
+    <script id="scr" src="https://github.com/escuelamanjosanchezlimon/escmanejosanchezlimon/blob/main/function.js"></script>
 
   </body>
 </html>
