--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </footer>
     
     
-    <script id="scr" src="scripts.js"></script>
+    <script id="scr" src="function.js"></script>
 
 <script>
 </script>
